--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # database
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/first_db
+spring.datasource.url=jdbc:postgresql://localhost:15432/books_db
 spring.datasource.username=postgres
 spring.datasource.password=123456
 
